--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -7,4 +7,4 @@ awslogs_setup_region: ap-southeast-2
 awslogs_setup_nanny_ps:      /usr/bin/ps
 awslogs_setup_nanny_cat:     /usr/bin/cat
 awslogs_setup_nanny_grep:    /usr/bin/grep
-awslogs_setup_nanny_service: /usr/sbin/service
+awslogs_setup_nanny_service_init_script: /etc/init.d/awslogs
