feat: Running apt-get update

--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -1,5 +1,10 @@
 ---
 
+- name: Running apt-get update
+  apt:
+    update_cache: yes
+    cache_valid_time: 3600
+
 - name: required packages have been installed with yum
   yum: name={{ item }} state=present
   with_items:
